--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 "喝了一夜酒的我早已酩酊大醉" </br>
 "Watching headlights from the back of the bar" </br>
 "酒吧里耀眼的灯光使我头昏眼花" </br>
-"All I wanna hear is your voice sa \"I miss you\"" </br>
-"我多想听到你对我说\"我想你了\"" </br>
+"All I wanna hear is your voice sa "I miss you"" </br>
+"我多想听到你对我说"我想你了" </br>
 "Cause I miss you<" </br>
 "因为我想你了" </br>
 "Footsteps through your door" </br>
-"在你的门前踟蹰不定" +
+"在你的门前踟蹰不定"</br>
 "Yeah I know I'll find a way" </br>
 "是的，我会找到我的出路";
